added input text and button for the number of the user

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
 
-
-    <script src="functions.js" charset="utf-8"></script>
+  <input id="inputUserNum" type="text" name="" value="">
+  <button id='btnAvvia' type="button" name="button">Avvia</button>
+  <script src="functions.js" charset="utf-8"></script>
   <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
