--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Campo Minato</title>
   </head>
   <body>
-  
+    <div class="container">
+  					<h3>Seleziona la difficoltà:</h3>
+  					<select id="inputDiff" class="" name="difficulty">
+  						<option value="easy">Easy</option>
+  						<option value="medium">Medium</option>
+  						<option value="Hard">Hard</option>
+  					</select>
+  				</div>
   <input id="inputUserNum" type="text" name="" value="">
   <button id='btnAvvia' type="button" name="button">Avvia</button>
   <script src="functions.js" charset="utf-8"></script>
