--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   				</div>
   <input id="inputUserNum" type="text" name="" value="">
   <button id='btnAvvia' type="button" name="button">Avvia</button>
+  <h1 id="punteggio"></h1>
   <script src="functions.js" charset="utf-8"></script>
   <script src="script.js" charset="utf-8"></script>
   </body>
