--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   					<select id="inputDiff" class="" name="difficulty">
   						<option value="easy">Easy</option>
   						<option value="medium">Medium</option>
-  						<option value="Hard">Hard</option>
+  						<option value="hard">Hard</option>
   					</select>
   				</div>
   <input id="inputUserNum" type="text" name="" value="">
