--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <input id="inputUserNum" type="text" name="" value="">
       <button id='btnAvvia' type="button" name="button">Avvia</button>
     </div>
+    <div id="wrapper">
+
+    </div>
       <h1 id="punteggio"></h1>
+  <script src="main-event-driven.js" charset="utf-8"></script>
   <script src="functions.js" charset="utf-8"></script>
   <script src="script.js" charset="utf-8"></script>
   </body>
